clouddriver-kubernetes/src/integration/resources/manifests/deployment_with_vol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: 'index.docker.io/library/alpine:3.12'
          name: myapp
          command:
            - tail
            - -f
            - /dev/null
          volumeMounts:
            - mountPath: /tmp/mounted
              name: mounted
      volumes:
        - name: mounted
