clouddriver-kubernetes/src/integration/resources/manifests/multi_deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: 'index.docker.io/library/alpine:3.12'
          name: myapp
          command:
            - tail
            - -f
            - /dev/null
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice
  name: myservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: myapp
  sessionAffinity: None
